# pysca

./: .gitignore  Makefile  README.md  pyproject.toml  pyproject.toml.poetry  requirements.txt
debian/: README  README.Debian  README.source  changelog  control  copyright  files  rules
pysca/: __init__.py  __logging.py  __main__.py  bindable.py  device.py  flexeffect.py  helpers.py  qtac.py  utils.py
src/pysca/: __init__.py  __main__.py  _version.py  bindable.py  device.py  flexeffect.py  helpers.py  utils.py
