[build-system]
requires = ["setuptools>=61.0","wheel","setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/pysca/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]
exclude = []

[tool.setuptools.package-data]
pysca = ["**/*.scada", "**/*.yaml", "**/*.ui", "**/LICENCE","**/README.md", "**/*.toml"]

[project]
dynamic = ["version"]
name = "pysca"
authors = [
  { name="Linnik V.V.", email="vlinnik@mail.ru" },
]
description = "Framework for developing Python+Qt GUI"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['AnyQt', 'sqlalchemy']

[project.urls]
"Homepage" = "https://github.com/vlinnik/pysca"
"Bug Tracker" = "https://github.com/vlinnik/pysca/issues"

[project.scripts]
pysca = "pysca.__main__:main"